--- a/requirements.txt
+++ b/requirements.txt
@@ -3,9 +3,8 @@ flask-sqlalchemy==3.0.5
 werkzeug==2.3.7
 requests==2.31.0
 pytesseract==0.3.10
-pdf2image==1.16.3
 pypdf2==3.0.1
-pillow==10.0.1
+pillow==9.5.0  # Older version that works
 sentence-transformers==2.2.2
 scikit-learn==1.3.2
 numpy==1.24.3
