--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,13 @@
 Flask==2.3.3
-flask-sqlalchemy==3.0.5
+Flask-SQLAlchemy==3.0.5
 werkzeug==2.3.7
 requests==2.31.0
 firebase-admin==6.2.0
 gunicorn==21.2.0
 python-dotenv==1.0.0
-sentence-transformers==5.1.2
-
+sentence-transformers==2.2.2
+scikit-learn==1.3.2
+numpy==1.24.3
+speechrecognition==3.10.0
+torch==2.1.0
+--index-url https://download.pytorch.org/whl/cpu
