--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,11 @@
-Flask==2.3.3
+Flask==2.2.5
 Flask-SQLAlchemy==3.0.5
-werkzeug==2.3.7
-requests==2.31.0
+werkzeug==2.2.3
+requests==2.28.2
 firebase-admin==6.2.0
-gunicorn==21.2.0
-python-dotenv==1.0.0
+gunicorn==20.1.0
+python-dotenv==0.21.1
 sentence-transformers==2.2.2
-scikit-learn==1.3.2
-numpy==1.24.3
+numpy==1.23.5
 speechrecognition==3.10.0
+# REMOVED: scikit-learn==1.3.2
