--- a/requirements.txt
+++ b/requirements.txt
@@ -8,4 +8,5 @@ python-dotenv==0.21.1
 sentence-transformers==2.2.2
 numpy==1.23.5
 speechrecognition==3.10.0
+setuptools==70.0.0
 # REMOVED: scikit-learn==1.3.2
