--- a/requirements.txt
+++ b/requirements.txt
@@ -5,8 +5,7 @@ requests==2.28.2
 firebase-admin==6.2.0
 gunicorn==20.1.0
 python-dotenv==0.21.1
-sentence-transformers==2.2.2
+sentence-transformers==2.7.0  # CHANGED from 2.2.2
 numpy==1.23.5
 speechrecognition==3.10.0
 setuptools==70.0.0
-# REMOVED: scikit-learn==1.3.2
